--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-body{
-    background-color: aqua;
+body {
+  background-color: lightgreen;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
 }
